  to JEventLoop, JFactory, and JFactory_base made to allow better
  user control of when GetNrows activates a factory.
- Default for janadump changed to not automatically activate tagged
  factories when printing summary header.
- Add SetExitCode and GetExitCode to JApplication.
- Added examples to scons build tree.
- Fixed bug where DEFTAG: feature only worked if AUTOACTIVATE was used

Changes in version 0.7.3
- Fixed issue with EVENTS_TO_SKIP only skipping EVENTS_TO_SKIP-1 events
- Add janaview plugin
- Add support for stdint types like uint32_t in janaroot
- Fixed longstanding bug in jgeomread where attributes specified in the
  middle of the xpath were not displayed
- Made JANA_CALIB_URL and JANA_CALIB_CONTEXT config. parameters
- Make JObject::Get() search for associated objects of associated objects,...
  (added associated_objects unit test to check that it works)
- Added JObject::GetAssociatedDescendants()
- Added JCalibration::GetVariation()
- Add EVENT_SOURCE_TYPE param. to allow user to force source type
- Add --listconfig command line switch
- -PAUTOACTIVATE=all activates all factories automatically
- Add vector versions of GetCalib to JCalibration API to allow access
  to calibration constants while maintaining position order of source
- Add RUNNUMBER configuration parameter that can be used to override
  the event source supplied run number.
- Added event barrier mechanism (set JEvent::sequential flag in JEventSource)
- Made event number uint64_t in most places and run number int32_t


Changes in version 0.7.2
- Use cache for JGeometryXML::Get(string xpath, string &sval)
  so many-thread process startups are much faster
- Fixed bug where $JANA_HOME/plugins was not automatically searched
- Use THREAD_TIMEOUT for first event also if it is larger than
  THREAD_TIMEOUT_FIRST_EVENT
- Set object pointer to NULL in GetSingle() unless only one object exits
  Also, added optional 3rd argument to supress throwing exception