@@ -4826,7 +4826,7 @@ namespace Catch {
         ~TextColour();
 
     private:
-        ConsoleColourImpl* m_impl;
+//        ConsoleColourImpl* m_impl;
     };
 
 } // end namespace Catch
@@ -6124,7 +6124,7 @@ namespace Catch {
 
     private:
         ReporterConfig m_config;
-        bool m_currentTestSuccess;
+//        bool m_currentTestSuccess;
 
         Stats m_testSuiteStats;
         Stats* m_currentStats;
