@@ -11,6 +11,8 @@ Changes in version 0.7.4
 - Add SetExitCode and GetExitCode to JApplication.
 - Added examples to scons build tree.
 - Fixed bug where DEFTAG: feature only worked if AUTOACTIVATE was used
+- Default compiler now c++/cc instead of g++/gcc and optimization on
+  by default (as well as all compiler warnings)
 
 Changes in version 0.7.3
 - Fixed issue with EVENTS_TO_SKIP only skipping EVENTS_TO_SKIP-1 events
